add update and delete wallet api
